# froq

./: Cargo.toml  FORK-NOTES.md  README.md
crates/codegen/froq-agent/: Cargo.toml  README.md
crates/codegen/froq-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/froq-agent/src/plugins/: discovery.rs  git_install.rs  hooks_adapter.rs  install_registry.rs  local_refresh.rs  manifest.rs  registry.rs  trust.rs
crates/codegen/froq-agent/src/prompt/: agents_md.rs  context.rs  ignore.rs  skills.rs  subagent_prompts.rs  template.rs  user_message.rs  workspace_user.rs
crates/codegen/froq-config-types/: Cargo.toml
crates/codegen/froq-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/froq-http/: Cargo.toml
crates/codegen/froq-http/src/: lib.rs
crates/codegen/froq-mcp/: Cargo.toml
crates/codegen/froq-mcp/src/: credentials.rs  lib.rs  mcp_http_client.rs  oauth.rs  servers.rs
crates/codegen/froq-mcp/tests/: repro_sse_flood.rs
crates/codegen/froq-pager/: Cargo.toml  README.md
crates/codegen/froq-pager-bin/: Cargo.toml
crates/codegen/froq-pager-bin/src/: main.rs
crates/codegen/froq-pager-minimal/: Cargo.toml
crates/codegen/froq-pager-minimal/src/: auth.rs  commit.rs  full_view.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/froq-pager/benches/: bench.md  edit_highlight.rs  render.rs  search.rs
crates/codegen/froq-pager/docs/: custom-hooks.md  hooks-and-plugins.md
crates/codegen/froq-pager/docs/user-guide/: 01-getting-started.md  02-authentication.md  04-slash-commands.md  05-configuration.md  11-custom-models.md  14-headless-mode.md  15-agent-mode.md  24-monitoring-usage.md
crates/codegen/froq-pager/npm/grok/: README.md  package.json
crates/codegen/froq-pager/npm/grok-darwin-arm64/: README.md  package.json
crates/codegen/froq-pager/npm/grok-darwin-x64/: README.md  package.json
crates/codegen/froq-pager/npm/grok-linux-arm64/: README.md  package.json
crates/codegen/froq-pager/npm/grok-linux-x64/: README.md  package.json
crates/codegen/froq-pager/npm/grok-win32-arm64/: README.md  package.json
crates/codegen/froq-pager/npm/grok-win32-x64/: README.md  package.json
crates/codegen/froq-pager/src/: client_identity.rs  config_toml_edit.rs  diff.rs  export_cmd.rs  git_info.rs  headless.rs  inline_media_ffmpeg.rs  input_log.rs  lib.rs  mcp_cmd.rs  memory_cmd.rs  memory_release.rs  memory_trace.rs  models.rs  plugin_cmd.rs  pty_wrap.rs  sessions_cmd.rs  share_cmd.rs  trace_cmd.rs  tracing.rs  unified_log.rs  wrap_clipboard_image.rs  wrap_cmd.rs  wrap_filter.rs  wrap_restore.rs
crates/codegen/froq-pager/tests/: doctor_early_dispatch.rs  grok_home_paths.rs  mermaid_render_subprocess.rs  pty_auto_mode.rs  pty_xtversion.rs  scripted_scenarios.rs  selection_model_public_api.rs  settings_e2e.rs
crates/codegen/froq-plugin-marketplace/: Cargo.toml
crates/codegen/froq-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  install_resolve.rs  installer.rs  lib.rs  scanner.rs  types.rs
crates/codegen/froq-prompt-queue/: Cargo.toml
crates/codegen/froq-sampling-types/: Cargo.toml
crates/codegen/froq-sampling-types/src/: conversation.rs  error.rs  lib.rs  types.rs
crates/codegen/froq-shell/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/froq-shell-session-support/: Cargo.toml
crates/codegen/froq-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/froq-shell/benches/: session_list.rs
crates/codegen/froq-shell/changelogs/: 0.2.66.json  0.2.66.md
crates/codegen/froq-shell/src/: builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  instrumentation.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs
crates/codegen/froq-shell/tests/: git_contention_e2e.rs  sandbox_requirements_pin.rs  session_load_perf.rs  team_managed_config.rs  test_active_sessions_smoke.rs  test_agent_type_invariant.rs  test_auth_provider_e2e.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_doomloop_capture.rs  test_fork_session.rs  test_global_extra_headers_e2e.rs  test_heap_profile_monitor.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_integration.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_registry_churn.rs  test_sampling_client.rs  test_settings_refresh.rs  test_stop_hook_e2e.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs  test_xai_session_update.rs  trace_replay.rs
crates/codegen/froq-subagent-resolution/: Cargo.toml
crates/codegen/froq-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/froq-tools-api/: Cargo.toml  build.rs
crates/codegen/froq-tools-api/src/: config_validation.rs
crates/codegen/froq-tools-api/tests/: wire_shape.rs
crates/codegen/froq-workspace/: Cargo.toml
crates/codegen/froq-workspace-client/: Cargo.toml
crates/codegen/froq-workspace-client/src/: lib.rs
crates/codegen/froq-workspace/src/: activity.rs  capability.rs  config.rs  daemonize.rs  diag_server.rs  discovery.rs  envrc.rs  error.rs  folder_trust.rs  fs_notify.rs  handle.rs  hub.rs  hub_auth.rs  hub_channel.rs  hub_ids.rs  hub_server.rs  lib.rs  mcp.rs  preview_supervisor.rs  project_config.rs  recovery.rs  rpc_envelope.rs  trust.rs  workspace_ops.rs
crates/common/froq-computer-hub-mcp-adapter/: Cargo.toml
crates/common/froq-computer-hub-mcp-adapter/src/: bridge.rs  lib.rs
crates/common/froq-tool-runtime/: Cargo.toml
crates/common/froq-tool-runtime/src/: context.rs  dispatch.rs  error.rs  lib.rs  render.rs  streaming.rs  tool.rs
crates/common/froq-tool-runtime/tests/: context_extensions.rs  error_conversion.rs  notification_serde.rs  search.rs  should_list.rs  tool_blocking.rs  tool_dyn.rs  tool_streaming.rs  trait_object_safety.rs
(+1085 files in other folders)
