[package]
license = "Apache-2.0"
name = "froq-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the grok CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
froq-auth = { workspace = true, features = ["middleware"] }
froq-sampler = { path = "../froq-sampler" }
froq-telemetry = { workspace = true }
froq-version = { workspace = true }
froq-workspace = { workspace = true }

[lints]
workspace = true
