[package]
license = "Apache-2.0"
name = "froq-plugin-marketplace"
version = "0.1.0"
edition.workspace = true

[dependencies]
dirs = { workspace = true }
dunce = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
wait-timeout = { workspace = true }
froq-tty-utils = { workspace = true }
froq-agent = { workspace = true }
froq-config = { workspace = true }
froq-hooks-plugins-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
