[package]
edition.workspace = true
license = "Apache-2.0"
name = "froq-prompt-queue"
version = "0.1.0"
description = "Shared prompt-queue wire types for froq-shell and froq-pager"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
