[package]
license = "Apache-2.0"
name = "froq-subagent-resolution"
version = "0.1.0"
edition.workspace = true
description = "Subagent configuration resolution: merges persona, role, and spawn-time overrides into a resolved spec"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
froq-sampling-types = { path = "../froq-sampling-types" }
froq-tools = { path = "../froq-tools" }
froq-tool-types.workspace = true
# TODO(phase2): add these when resolve_subagent_spec() composition is implemented:
# froq-agent = { path = "../froq-agent" }  # AgentDefinition lookup
# froq-fast-worktree = { path = "../froq-fast-worktree" }  # worktree creation

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
