[package]
license = "Apache-2.0"
name = "froq-workspace-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight typed client for hub-proxied workspace.* RPCs (shared by froq-shell proxy mode and other consumers)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
froq-computer-hub-sdk = { workspace = true }
froq-workspace-types = { workspace = true }
froq-tool-protocol = { workspace = true }
froq-tool-runtime = { workspace = true }

[features]
default = []
default-bazel = []
[dev-dependencies]
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
froq-tool-types = { workspace = true }

[lints]
workspace = true
